<resources>
    <string name="app_name">TastyRecipes</string>
    <string name="home_item">Home</string>
    <string name="favourite_item">Favourite</string>
    <string name="search_item">Search</string>
    <string name="profile_item">Profile</string>
    <string name="top_results">Top Results</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_category">Recipe Category</string>
    <string name="category_title">Category Title</string>
    <string name="category_desc">Category Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="existing_user">Existing User?</string>
    <string name="create_new_account">Create new Account?</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="categories">Categories</string>
    <string name="ingredients">Ingredients</string>
    <string name="favourite_recipes">Favourite Recipes</string>
    <string name="recipes">Recipes</string>

</resources>