<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_fragment"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textColor="@color/pink_500"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/name"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:textColor="@color/pink_600"
            android:textColorHint="@color/pink_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edtUserEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/email"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:textColor="@color/pink_600"
            android:textColorHint="@color/pink_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

        <EditText
            android:id="@+id/edtUserPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_baseline_security_24"
            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:textColor="@color/pink_600"
            android:textColorHint="@color/pink_600"
            app:layout_constraintEnd_toEndOf="@+id/edtUserEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtUserEmail"
            app:layout_constraintTop_toBottomOf="@+id/edtUserEmail" />


        <EditText
            android:id="@+id/edtUserAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:drawableLeft="@drawable/ic_baseline_location_city_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:textColor="@color/pink_600"
            android:textColorHint="@color/pink_600"
            app:layout_constraintEnd_toEndOf="@+id/edtUserPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtUserPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtUserPassword" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/input_bg"
            android:text="@string/update"
            app:layout_constraintEnd_toEndOf="@+id/edtUserAddress"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtUserAddress"
            app:layout_constraintTop_toBottomOf="@+id/edtUserAddress" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:background="@drawable/input_bg"
            android:drawableLeft="@drawable/ic_baseline_login_24"
            android:drawablePadding="10dp"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="@+id/btnUpdate"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnUpdate"
            app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>