<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:id="@+id/loginFrame"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/pink_500"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtLoginEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/email"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:textColor="@color/pink_600"
            android:textColorHint="@color/pink_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_baseline_security_24"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:textColor="@color/pink_600"
            android:textColorHint="@color/pink_600"
            app:layout_constraintEnd_toEndOf="@+id/edtLoginEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtLoginEmail"
            app:layout_constraintTop_toBottomOf="@+id/edtLoginEmail" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/input_bg"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/edtLoginPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtLoginPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtLoginPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>